--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,9 +2,41 @@
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
-guava = "33.2.1-jre"
-junit-jupiter = "5.10.3"
+commons-dbcp-commons-dbcp = "1.2.2"
+commons-fileupload-commons-fileupload = "1.3.3"
+commons-io-commons-io = "2.5"
+javax-mail-mail = "1.4.3"
+javax-servlet-javax-servlet-api = "3.1.0"
+javax-servlet-jsp-javax-servlet-jsp-api = "2.3.1"
+javax-servlet-jstl = "1.2"
+junit-junit = "4.12"
+log4j-log4j = "1.2.17"
+org-ehcache-ehcache = "3.4.0"
+org-hibernate-hibernate-core = "5.2.10.Final"
+org-hibernate-hibernate-ehcache = "5.2.10.Final"
+org-quartz-scheduler-quartz = "2.3.0"
+org-springframework-spring-context-support = "6.1.4"
+org-springframework-spring-orm = "6.1.4"
+org-springframework-spring-test = "6.1.4"
+org-springframework-spring-webmvc = "6.1.4"
+taglibs-standard = "1.1.2"
 
 [libraries]
-guava = { module = "com.google.guava:guava", version.ref = "guava" }
-junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
+commons-dbcp-commons-dbcp = { module = "commons-dbcp:commons-dbcp", version.ref = "commons-dbcp-commons-dbcp" }
+commons-fileupload-commons-fileupload = { module = "commons-fileupload:commons-fileupload", version.ref = "commons-fileupload-commons-fileupload" }
+commons-io-commons-io = { module = "commons-io:commons-io", version.ref = "commons-io-commons-io" }
+javax-mail-mail = { module = "javax.mail:mail", version.ref = "javax-mail-mail" }
+javax-servlet-javax-servlet-api = { module = "javax.servlet:javax.servlet-api", version.ref = "javax-servlet-javax-servlet-api" }
+javax-servlet-jsp-javax-servlet-jsp-api = { module = "javax.servlet.jsp:javax.servlet.jsp-api", version.ref = "javax-servlet-jsp-javax-servlet-jsp-api" }
+javax-servlet-jstl = { module = "javax.servlet:jstl", version.ref = "javax-servlet-jstl" }
+junit-junit = { module = "junit:junit", version.ref = "junit-junit" }
+log4j-log4j = { module = "log4j:log4j", version.ref = "log4j-log4j" }
+org-ehcache-ehcache = { module = "org.ehcache:ehcache", version.ref = "org-ehcache-ehcache" }
+org-hibernate-hibernate-core = { module = "org.hibernate:hibernate-core", version.ref = "org-hibernate-hibernate-core" }
+org-hibernate-hibernate-ehcache = { module = "org.hibernate:hibernate-ehcache", version.ref = "org-hibernate-hibernate-ehcache" }
+org-quartz-scheduler-quartz = { module = "org.quartz-scheduler:quartz", version.ref = "org-quartz-scheduler-quartz" }
+org-springframework-spring-context-support = { module = "org.springframework:spring-context-support", version.ref = "org-springframework-spring-context-support" }
+org-springframework-spring-orm = { module = "org.springframework:spring-orm", version.ref = "org-springframework-spring-orm" }
+org-springframework-spring-test = { module = "org.springframework:spring-test", version.ref = "org-springframework-spring-test" }
+org-springframework-spring-webmvc = { module = "org.springframework:spring-webmvc", version.ref = "org-springframework-spring-webmvc" }
+taglibs-standard = { module = "taglibs:standard", version.ref = "taglibs-standard" }
